# ameba-rtos-matter

./: Kconfig  README.md
common/atcmd/: atcmd_matter.c
common/atf/include/: matter_rtk_svc_setup.h
common/atf/libc/: rand.c
common/atf/mbedtls_secure/: mbedtls_secure.c
common/bluetooth/: matter_blemgr_common.c
common/bluetooth/ble_matter_adapter_peripheral/: ble_matter_adapter_peripheral_main.c
common/file_system/kv/: kv_matter.c  kv_matter.h
common/include/: FreeRTOSConfig_Matter.h  lwipopts_matter.h  platform_stdlib_matter.h
common/lwip/api/: lwip_netconf_matter.c  lwip_netconf_matter.h
common/mbedtls/: matter_mbedtls_config.h  matter_mbedtls_nsc.c
common/mbedtls/mbedtls-2.28.1/library_s/: mbedtls_nsc.c
common/os/: freertos_secure_additions.c
common/port/: chip_porting.h  matter_kv.c  matter_kvs.c  matter_kvs.h  matter_lwip.c  matter_ota.c  matter_timers.c  matter_timers.h  matter_utils.c  matter_wifis.c  matter_wifis.h
common/wifi/: wifi_conf.h
core/: matter_core.cpp  matter_data_model.cpp  matter_data_model_presets.cpp  matter_device_utils.cpp  matter_mdns_filter.h
docs/: ameba_matter_integration.md  amebadplus_general_build.md  amebalite_general_build.md  amebapro2_general_build.md  amebasmart_general_build.md  matter_building_guide.md  matter_device_at_commands.md  matter_general_guide.md
driver/: bridge_dm_driver.cpp  dishwasher_driver.cpp  dishwasher_driver.h  fan_driver.cpp  fan_driver.h  led_driver.cpp  led_driver.h  microwaveoven_driver.cpp  microwaveoven_driver.h  refrigerator_driver.h  temp_hum_sensor_driver.h  thermostat.h  thermostat_ui.h  washer_driver.cpp  washer_driver.h
drivers/device/: bridge_dm_driver.cpp
drivers/matter_drivers/device_energy_management/: ameba_energy_management_common_main.cpp
drivers/matter_drivers/valve_control/: ameba_valve_control_delegate.h
example/: matter_example_entry.c
example/aircon/: README.md  example_matter_aircon.cpp
example/bridge/: README.md  example_matter_bridge.cpp  matter_drivers.cpp
example/bridge_dm/: README.md  example_matter_bridge.cpp
example/chiptest/: example_matter.c
example/dishwasher/: README.md  example_matter_dishwasher.cpp
example/fan/: README.md  example_matter_fan.cpp
example/laundrywasher/: README.md  example_matter_laundrywasher.cpp
example/light/: README.md  example_matter_light.cpp
example/light_dm/: README.md  example_matter_light.cpp
example/microwaveoven/: README.md  example_matter_microwave_oven.cpp
example/refrigerator/: README.md  example_matter_refrigerator.cpp
example/thermostat/: README.md  example_matter_thermostat.cpp
examples/aircon/: aircon-app-ameba-rtos.zap  example_matter_aircon.cpp  matter_drivers.cpp
examples/bridge/: example_matter_bridge.cpp  matter_drivers.cpp
examples/bridge_dm/: example_matter_bridge.cpp
examples/chiptest/: example_matter.c
examples/dishwasher/: example_matter_dishwasher.cpp  matter_drivers.cpp
examples/energy_management/: matter_drivers.cpp
examples/fan/: example_matter_fan.cpp  matter_drivers.cpp
examples/laundrywasher/: example_matter_laundrywasher.cpp  matter_drivers.cpp
examples/light/: example_matter_light.cpp  matter_drivers.cpp
examples/light_dm/: example_matter_light.cpp  matter_drivers.cpp
examples/microwaveoven/: example_matter_microwave_oven.cpp  matter_drivers.cpp
examples/refrigerator/: example_matter_refrigerator.cpp  matter_drivers.cpp
examples/thermostat/: example_matter_thermostat.cpp
project/amebadplus/: Makefile  Makefile.include.matter  Makefile.include.matter.km4.gen
project/amebadplus/cmake/: CMakeLists.txt  compileflags.matter.cmake  matter.cmake  public_definitions_matter.cmake  public_includes_matter.cmake
project/amebadplus/cmake/application/: CMakeLists.txt
project/amebadplus/cmake2/: CMakeLists.txt  compile_options_matter.cmake  matter.cmake  public_definitions_matter.cmake
project/amebadplus/cmake_old/: includeflags.matter.cmake  matter.cmake
project/amebadplus/cmake_old/mbedtls_secure/: CMakeLists.txt
project/amebadplus/make/application/: Makefile
project/amebadplus/make/chip_main/: Makefile
project/amebalite/: Makefile  Makefile.include.matter  Makefile.include.matter.km4.gen
project/amebalite/cmake/: compileflags.matter.cmake  includeflags.matter.cmake  matter.cmake
project/amebalite/cmake/mbedtls/: CMakeLists.txt
project/amebalite/cmake/utilities/: generate_args_gn.cmake
project/amebalite/make/application/: Makefile
project/amebapro2/cmake/: CMakeLists.txt  matter.cmake
project/amebapro2/cmake/light_port/: light_port.cmake
project/amebapro2/cmake/utilities/: generate_args_gn.cmake  generate_cluster_file.cmake
project/amebasmart/: Makefile  Makefile.include.matter  Makefile.include.matter.ap.gen
project/amebasmart/make/application/: Makefile
project/amebasmart/make/atf/: Makefile
project/amebasmart/make/mbedtls/: Makefile
project/amebaz2/make/air_purifier/: lib_chip_air_purifier_main.mk
project/amebaz2/make/all_clusters/: lib_chip_main.mk
project/amebaz2/make/chef/: lib_chip_chef_main.mk
project/amebaz2/make/light/: lib_chip_light_main.mk
project/amebaz2/make/light_switch/: lib_chip_light_switch_main.mk
project/amebaz2/make/otar/: lib_chip_otar_main.mk
project/amebaz2plus/make/air_purifier/: lib_chip_air_purifier_main.mk
project/amebaz2plus/make/all_clusters/: lib_chip_main.mk
project/amebaz2plus/make/chef/: lib_chip_chef_main.mk
project/amebaz2plus/make/light/: lib_chip_light_main.mk
project/amebaz2plus/make/light_switch/: lib_chip_light_switch_main.mk  lib_chip_switch_main.mk
project/cmake/: CMakeLists.txt  Kconfig  matter.cmake  public_definitions_matter.cmake  public_includes_matter.cmake
project/cmake/atf_mbedtls_secure/: CMakeLists.txt  Makefile
project/cmake/flags/: public_definitions_matter.cmake
project/cmake/mbedtls_secure/: CMakeLists.txt
project/cmake/utilities/: generate_args_gn.cmake  generate_cluster_file.cmake  update_flags.cmake
tools/docker/: Dockerfile
tools/docker/amebad/: Dockerfile
tools/docker/amebaz2/: Dockerfile
(+109 files in other folders)
